import 'package:horizon/domain/entities/base_path.dart';

import 'package:rational/rational.dart';
import 'package:decimal/decimal.dart';

enum WalletType {
  horizon("Horizon", "Horizon Native"),
  bip32("BIP32", "Freewallet / Counterwallet / Rare Pepe Wallet");

  const WalletType(this.name, this.description);
  final String name;
  final String description;
}
...
